--- a/index.html
+++ b/index.html
@@ -131,7 +131,6 @@ a{
     letter-spacing: 4px;
     overflow: hidden;
     margin-right: 50px;
-   
 }
 a:hover{
     background: #03e9f4;
@@ -209,7 +208,7 @@ a span:nth-child(4){
     left: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(360deg,transparent,#03e9f4);
+    background: linear-gradient(180deg,transparent,#03e9f4);
     animation: animate4 1s linear infinite;
     animation-delay: 0.75s;
 }
@@ -258,6 +257,20 @@ of Simple CSS Waves-->
             <span></span>
             <span></span>
             calculate your age
+        </a>
+        <a href="sub/calc.html" target="_blank">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            creative calculater
+        </a>
+        <a href="sub/calc3.html" target="_blank">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            calculator buttons
         </a>
    
     <!--Waves Container-->
