--- a/sub/index2.html
+++ b/sub/index2.html
@@ -67,44 +67,59 @@ body{
 </head>
     <body>
 <div class="calculator-grid">
-    <div class="output">
-        <input type="text" class="screen">
+    <div class="output" style="border-style:dashed; border-color: red; border-width: 2px;">
+        <input type="text" class="screen" id="input">
     </div>
     
-    <button type="button" data-all-clear class="span-two">all clear</button>
-    <button type="button" data-delete>delete</button>
-    <button type="button" data-num="/" class="btn btn-num">÷</button>
-    <button type="button" data-num="1" class="btn btn-num">1</button>
-    <button type="button" data-num="2" class="btn btn-num">2</button>
-    <button type="button" data-num="3" class="btn btn-num">3</button>
-    <button type="button" data-num="*" class="btn btn-num">*</button>
-    <button type="button" data-num="4" class="btn btn-num">4</button>
-    <button type="button" data-num="5" class="btn btn-num">5</button>
-    <button type="button" data-num="6" class="btn btn-num">6</button>
-    <button type="button" data-num="+" class="btn btn-num">+</button>
-    <button type="button" data-num="7" class="btn btn-num">7</button>
-    <button type="button" data-num="8" class="btn btn-num">8</button>
-    <button type="button" data-num="9" class="btn btn-num">9</button>
-    <button type="button" data-num="9" class="btn btn-num">-</button>
-    <button type="button" data-decimal class>.</button>
-    <button type="button" data-num="0">0</button>
-    <button type="button" data-equals class="span-two">=</button>
+    <button class="span-two">all clear</button>
+    <button>c</button>
+    <button>÷</button>
+    <button>1</button>
+    <button>2</button>
+    <button>3</button>
+    <button>x</button>
+    <button>4</button>
+    <button>5</button>
+    <button>6</button>
+    <button>+</button>
+    <button>7</button>
+    <button>8</button>
+    <button>9</button>
+    <button>-</button>
+    <button>.</button>
+    <button>0</button>
+    <button class="span-two">=</button>
 </div>
 <script>
 
-(function() {
-        let screen = document.querySelector('data-previousOperand');
-        let buttons = document.querySelectorAll('.btn');
-        let clear = document.querySelector('.btn-clear');
-        let equal = document.querySelector('.btn-equal');
+    let input = document.getElementById("input");
+    let buttons = document.querySelectorAll("button");
+    let inputValue = "";
 
-        buttons.forEach(function(button) {
-            button.addEventListener('click', function(e) {
-                let value = e.target.dataset.num;
-                screen.value += value;
+    for (item of buttons){
+        item.addEventListener("click" , (e) => {
+            buttonText = e.target.innerText;
+            console.log("button text is " , buttonText);
+
+            if(buttonText == "x"){
+                buttonText = "*";
+                inputValue += buttonText;
+                input.value = inputValue;
+            }
+            else if (buttonText == "c") {
+                inputValue="";
+                input.value = inputValue;
+            }
+            else if (buttonText == "=") {
+                input.value = eval(inputValue);
+            }
+           
+            else {
+                inputValue += buttonText;
+                input.value= inputValue
+            }
         })
-    })
-    })();
+    }
 
 </script>
     </body>
